[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -40,3 +40,8 @@ body {
     max-height: 99%;
     
 }
+#body-1
+{
+    background-image: url(imagePAth/https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg);
+    background-size: cover;
+}
