--- a/ui/style.css
+++ b/ui/style.css
@@ -42,6 +42,6 @@ body {
 }
 #body-1
 {
-    background-image: url(imagePAth/https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg);
+    background-image: url(https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg);
     background-size: cover;
 }
