--- a/ui/style.css
+++ b/ui/style.css
@@ -44,4 +44,5 @@ body {
 {
     background-image: url(https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
 }
