[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -46,3 +46,10 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
 }
+#links
+{
+    background-color: white;
+    color: black;
+     margin-top:500px;
+    
+}
