[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -50,6 +50,7 @@ body {
 {
     background-color: white;
     color: black;
-     margin-top:500px;
-    
+     margin-top:600px;
+     font-size:300%;
+    font-family:italics;  
 }
