[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -42,7 +42,7 @@ body {
 }
 #body-1
 {
-    /*background-image: url(https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg);*/
+    background-image: url(https://i.ytimg.com/vi/gTlpJ9ue04w/maxresdefault.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
